@@ -2,6 +2,7 @@
 ---------------------
 - lookup_init cleanup and fix missed memory leak.
 - use nis map order to check if update is needed.
+- fix couple of memory leaks in lookup_yp.c.
 
 20/6/2006 autofs-5.0.0_beta5
 ---------------------------
